@@ -1,3 +1,8 @@
+[B]Version 3.0.0 - 2013-05-01[/B]
+- Initial version for Frodo
+- Added support for Bonanza Radio content
+  Access the addon through the Music addons to see this.
+
 [B]Version 2.1.4 - 2012-10-21[/B]
 - Fixed problems with differences between Eden and Frodo (http://trac.xbmc.org/ticket/13349)
 
